[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moca"
version = "0.1.0"
description = "MoCA: Morphological Condition Alignment toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Orian Stapleton"}]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "umap-learn",
]

[tool.setuptools]
package-dir = {"" = "src"}
